tests/NormalTests/paczka1/small_fuzzy/52455286.err
Error in line 1: ILFbO A397 39,2
Error in line 6: 9doRH A754 98,2
